maze.lessons.maze.island.IslandMaze.scala.error
Escaper:7: error: not found: value DIrection
			do gauche() while (getDirection()==DIrection.NORTH)
                                                           ^Escaper:33: warning: enclosing method murGauche has result type Unit: return value discarded
  return res
  ^